--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1172,6 +1172,26 @@ md-input-container #captcha input{
 	margin-bottom: 8px;
 }
 
+/* global progress bar */
+
+.globalProgressbar{
+	background: rgba(255, 255, 255, 0.8);
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	z-index: 10000;
+	top: 0;
+	left: 0;
+}
+
+.globalProgressSpinner{
+	position: absolute;
+    top: 40%;
+    left: 50%;
+    margin-top: -25px;
+    margin-left: -25px;
+}
+
 @media only screen and (max-width: 767px) and (min-width: 0)
 {.navbar-brand {
     float: left;
